--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title:
 tagline:          'Ashwini Raina'
 description:      ''
 url:              http://hyde.getpoole.com
-baseurl:          /
+#baseurl:          /
 
 author:
   name:           'Mark Otto'
